Add heartbeat endpoint; Hack to set context path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# We're not running as a servlet but this is being used as a hack to set the context path so we're not hardcoding
+# a base path (/api) on every endpoint. See the WebFilter in ProjectZYXApplication.java to see how this is
+# being used.
+server.servlet.context-path=/api
